# trunk

./: CMakeLists.txt  README.md
include/trunk/: function.hxx  object.hxx  operation.hxx  reference.hxx  string.hxx
src/: CMakeLists.txt  main.cxx
